--- a/src/assets/data/project-quotes.json
+++ b/src/assets/data/project-quotes.json
@@ -1,67 +1,79 @@
 {
-    "iPhone65Images": [
+    "data": [
         {
-            "src": "/assets/images/projects/quotes/iphone_6.5_1.png",
-            "caption": "Quotes App"
+            "label": "iPhone (6.5”)",
+            "images": [
+                {
+                    "src": "/assets/images/projects/quotes/iphone_6.5_1.png",
+                    "caption": "Quotes App"
+                },
+                {
+                    "src": "/assets/images/projects/quotes/iphone_6.5_3.png",
+                    "caption": "Swipe to mark as favorite"
+                },
+                {
+                    "src": "/assets/images/projects/quotes/iphone_6.5_2.png",
+                    "caption": "Select multiple quotes to manage"
+                },
+                {
+                    "src": "/assets/images/projects/quotes/iphone_6.5_4.png",
+                    "caption": "Organise quotes by collections"
+                },
+                {
+                    "src": "/assets/images/projects/quotes/iphone_6.5_5.png",
+                    "caption": "Add new collection"
+                }
+            ]
         },
         {
-            "src": "/assets/images/projects/quotes/iphone_6.5_3.png",
-            "caption": "Swipe to mark as favorite"
+            "label": "iPhone (5.5”)",
+            "images": [
+                {
+                    "src": "/assets/images/projects/quotes/iphone_5.5_1.png",
+                    "caption": "Quotes App"
+                },
+                {
+                    "src": "/assets/images/projects/quotes/iphone_5.5_2.png",
+                    "caption": "Swipe to mark as favorite"
+                },
+                {
+                    "src": "/assets/images/projects/quotes/iphone_5.5_3.png",
+                    "caption": "Select multiple quotes to manage"
+                },
+                {
+                    "src": "/assets/images/projects/quotes/iphone_5.5_4.png",
+                    "caption": "Organise quotes by collections"
+                },
+                {
+                    "src": "/assets/images/projects/quotes/iphone_5.5_5.png",
+                    "caption": "Add new collection"
+                },
+                {
+                    "src": "/assets/images/projects/quotes/iphone_5.5_6.png",
+                    "caption": "Preview a quote"
+                }
+            ]
         },
         {
-            "src": "/assets/images/projects/quotes/iphone_6.5_2.png",
-            "caption": "Select multiple quotes to manage"
-        },
-        {
-            "src": "/assets/images/projects/quotes/iphone_6.5_4.png",
-            "caption": "Organise quotes by collections"
-        },
-        {
-            "src": "/assets/images/projects/quotes/iphone_6.5_5.png",
-            "caption": "Add new collection"
-        }
-    ],
-    "iPhone55Images": [
-        {
-            "src": "/assets/images/projects/quotes/iphone_5.5_1.png",
-            "caption": "Quotes App"
-        },
-        {
-            "src": "/assets/images/projects/quotes/iphone_5.5_2.png",
-            "caption": "Swipe to mark as favorite"
-        },
-        {
-            "src": "/assets/images/projects/quotes/iphone_5.5_3.png",
-            "caption": "Select multiple quotes to manage"
-        },
-        {
-            "src": "/assets/images/projects/quotes/iphone_5.5_4.png",
-            "caption": "Organise quotes by collections"
-        },
-        {
-            "src": "/assets/images/projects/quotes/iphone_5.5_5.png",
-            "caption": "Add new collection"
-        },
-        {
-            "src": "/assets/images/projects/quotes/iphone_5.5_6.png",
-            "caption": "Preview a quote"
-        }
-    ],
-    "watchImages": [
-        {
-            "src": "/assets/images/projects/quotes/watch_2.png"
-        },
-        {
-            "src": "/assets/images/projects/quotes/watch_1.png",
-            "caption": "Favorite quotes"
-        },
-        {
-            "src": "/assets/images/projects/quotes/watch_3.png",
-            "caption": "Preview a quote"
-        },
-        {
-            "src": "/assets/images/projects/quotes/watch_4.png",
-            "caption": "Sync quotes"
+            "label": "Apple watch",
+            "description": "View quotes on your wrist",
+            "images": [
+                {
+                    "src": "/assets/images/projects/quotes/watch_2.png"
+                },
+                {
+                    "src": "/assets/images/projects/quotes/watch_1.png",
+                    "caption": "Favorite quotes"
+                },
+                {
+                    "src": "/assets/images/projects/quotes/watch_3.png",
+                    "caption": "Preview a quote"
+                },
+                {
+                    "src": "/assets/images/projects/quotes/watch_4.png",
+                    "caption": "Sync quotes"
+                }
+            ]
         }
     ]
 }
