--- a/package.json
+++ b/package.json
@@ -11,15 +11,16 @@
     "private": true,
     "dependencies": {
         "@angular/animations": "^17.2.0",
+        "@angular/cdk": "^17.2.2",
         "@angular/common": "^17.2.0",
         "@angular/compiler": "^17.2.0",
         "@angular/core": "^17.2.0",
-        "@angular/cdk": "^17.2.2",
         "@angular/forms": "^17.2.0",
         "@angular/platform-browser": "^17.2.0",
         "@angular/platform-browser-dynamic": "^17.2.0",
         "@angular/router": "^17.2.0",
         "@fortawesome/fontawesome-free": "^6.5.2",
+        "@vercel/analytics": "^1.3.1",
         "aos": "^2.3.4",
         "rxjs": "~7.8.0",
         "tslib": "^2.3.0",
@@ -29,10 +30,10 @@
         "@angular-devkit/build-angular": "^17.2.3",
         "@angular/cli": "^17.2.3",
         "@angular/compiler-cli": "^17.2.0",
-        "@typescript-eslint/eslint-plugin": "^7.2.0",
-        "@typescript-eslint/parser": "^7.2.0",
         "@types/aos": "^3.0.7",
         "@types/jasmine": "~5.1.0",
+        "@typescript-eslint/eslint-plugin": "^7.2.0",
+        "@typescript-eslint/parser": "^7.2.0",
         "autoprefixer": "^10.4.19",
         "eslint": "^8.57.0",
         "jasmine-core": "~5.1.0",
